physics ball demo

--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
-    <title>Sketch</title>
+<body>
+    <h3><a href="/poisson-disc-sampling">poisson-disc-sampling</a></h3>
+    <p>Implementation of Poisson Disc Sampling based on the O(n) algorithm described in
+        <a
+            href="https://www.cs.ubc.ca/~rbridson/docs/bridson-siggraph07-poissondisk.pdf">https://www.cs.ubc.ca/~rbridson/docs/bridson-siggraph07-poissondisk.pdf</a>.
+    </p>
+    <h3><a href="/physics-collision">physics-collision</a></h3>
+    <p>Implementation of simple ball physics with Uniform Spacial Partitioning</p>
+</body>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
-
-    <script src="libraries/p5.min.js"></script>
-    <script src="libraries/p5.sound.min.js"></script>
-  </head>
-
-  <body>
-    <script src="sketch.js"></script>
-  </body>
 </html>
