--- a/physics-collision/index.html
+++ b/physics-collision/index.html
@@ -14,6 +14,35 @@
 </head>
 
 <body>
+  <div id="ui">
+    <div id="debugOptions">
+      <h3>Debug Options</h3>
+      <div class="separator"></div>
+      <label>
+        <input type="checkbox" id="debugShowGrid" checked>
+        Show Grid
+      </label>
+      <label>
+        <input type="checkbox" id="debugShowCellCounts" checked>
+        Show Cell Counts
+      </label>
+      <label>
+        <input type="checkbox" id="debugShowVelocityVectors">
+        Show Velocity Vectors
+      </label>
+      <label>
+        <input type="checkbox" id="debugShowBallCells" checked>
+        Show Ball Cells
+      </label>
+      <label>
+        <input type="checkbox" id="debugShowBallIds" checked>
+        Show Ball Ids
+      </label>
+    </div>
+    <button id="resetBtn">Reset</button>
+  </div>
+
+
   <script src="sketch.js"></script>
 </body>
 
