adding favourite shaders

--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
             href="https://www.cs.ubc.ca/~rbridson/docs/bridson-siggraph07-poissondisk.pdf">https://www.cs.ubc.ca/~rbridson/docs/bridson-siggraph07-poissondisk.pdf</a>.
     </p>
     <h3><a href="/physics-collision">physics-collision</a></h3>
-    <p>Implementation of simple ball physics with Uniform Spacial Partitioning</p>
+    <p>Implementation of simple ball physics with Uniform Spacial Partitioning.</p>
+    <h3><a href="https://www.shadertoy.com/view/NllBzj">wave-background-shader</a></h3>
+    <p>Fake ocean-like waves in a GLSL Shader using <a href="https://iquilezles.org/articles/warp/">domain warping</a>
+        and Fractional Brownian Motion.</p>
+    <h3><a href="https://www.shadertoy.com/view/ftGyWD">mandlebrot-julia-set-shader</a></h3>
+    <p>Interactive Mandelbrot and Julia set explorer in a GLSL Shader.</p>
+    <h3><a href="https://www.shadertoy.com/view/Dd2SRw">conways-game-of-life-shader</a></h3>
+    <p>Conway's Game of Life in a GLSL Shader.</p>
 </body>
 
 </html>
